--- a/Address Book/src/address/book/MainFXMLDocument.fxml
+++ b/Address Book/src/address/book/MainFXMLDocument.fxml
@@ -27,9 +27,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane id="AnchorPane" maxHeight="750.0" maxWidth="1300.0" minHeight="750.0" minWidth="1300.0" prefHeight="750.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="address.book.MainFXMLDocumentController">
+<AnchorPane id="AnchorPane" maxHeight="700.0" maxWidth="1300.0" minHeight="600.0" minWidth="1100.0" prefHeight="700.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="address.book.MainFXMLDocumentController">
    <children>
-      <VBox layoutX="278.0" layoutY="111.0" prefHeight="700.0" prefWidth="1300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutX="278.0" layoutY="111.0" maxHeight="700.0" maxWidth="1300.0" minHeight="600.0" minWidth="1100.0" prefHeight="700.0" prefWidth="1250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <ToolBar prefHeight="80.0" prefWidth="1300.0" style="-fx-background-color: linear-gradient(orange,khaki, white);">
                <items>
@@ -80,7 +80,7 @@
                               </TableView>
                               <ToolBar style="-fx-background-color: khaki;">
                                  <items>
-                                    <TextField fx:id="searchField" onKeyPressed="#handleSearchOnKeyAction" prefHeight="38.0" prefWidth="336.0" promptText="Search by Name or Nickname" />
+                                    <TextField fx:id="searchField" onKeyPressed="#handleSearchOnKeyAction" prefHeight="38.0" prefWidth="328.0" promptText="Search by Name or Nickname" />
                                     <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
                                           <Image url="@../../icon/1477731457_search_magnifying_glass_find.png" />
@@ -103,7 +103,7 @@
                                           <GridPane layoutX="40.0" layoutY="14.0" prefHeight="505.0" prefWidth="907.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="10.0">
                                             <columnConstraints>
                                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="345.0" minWidth="10.0" prefWidth="138.0" />
-                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="574.0" minWidth="10.0" prefWidth="344.0" />
+                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="574.0" minWidth="10.0" prefWidth="312.0" />
                                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="574.0" minWidth="10.0" prefWidth="228.0" />
                                             </columnConstraints>
                                             <rowConstraints>
@@ -290,7 +290,7 @@
                                           <GridPane layoutX="40.0" layoutY="14.0" prefHeight="505.0" prefWidth="907.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="10.0">
                                              <columnConstraints>
                                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="345.0" minWidth="10.0" prefWidth="138.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="574.0" minWidth="10.0" prefWidth="344.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="574.0" minWidth="10.0" prefWidth="312.0" />
                                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="574.0" minWidth="10.0" prefWidth="228.0" />
                                              </columnConstraints>
                                              <rowConstraints>
@@ -651,16 +651,20 @@
             </SplitPane>
             <ToolBar prefHeight="80.0" prefWidth="1300.0" style="-fx-background-color: linear-gradient(white, khaki, orange);">
                <items>
-                  <HBox prefHeight="61.0" prefWidth="177.0" translateX="780.0">
+                  <HBox prefHeight="61.0" prefWidth="197.0" spacing="10.0" translateX="20.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#handleCreateNewContactAction" prefHeight="26.0" prefWidth="180.0" text="Create new Contact">
+                        <Label prefHeight="54.0" prefWidth="116.0" text="About Developer:" />
+                        <ImageView fitHeight="25.0" fitWidth="25.0" onMouseClicked="#handleFacebookOverViewAction" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../icon/facebook.png" />
+                           </image>
                            <HBox.margin>
                               <Insets top="15.0" />
                            </HBox.margin>
-                        </Button>
-                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                        </ImageView>
+                        <ImageView fitHeight="25.0" fitWidth="25.0" onMouseClicked="#handleGooglePlusOverViewAction" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../icon/edit.png" />
+                              <Image url="@../../icon/gp.png" />
                            </image>
                            <HBox.margin>
                               <Insets top="15.0" />
@@ -668,17 +672,10 @@
                         </ImageView>
                      </children>
                   </HBox>
-                  <HBox translateX="790.0">
+                  <HBox translateX="50.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#handleCreateNewGroupOrEditGroupInfoAction" prefHeight="26.0" prefWidth="258.0" text="Create New Group or Edit Group Info">
-                           <HBox.margin>
-                              <Insets top="15.0" />
-                           </HBox.margin>
-                        </Button>
-                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../icon/add.png" />
-                           </image>
+                        <Label prefHeight="53.0" prefWidth="125.0" />
+                        <ImageView fitHeight="25.0" fitWidth="25.0" onMouseClicked="#handleAboutUpdateAction" pickOnBounds="true" preserveRatio="true">
                            <HBox.margin>
                               <Insets top="15.0" />
                            </HBox.margin>
